struggling with otf font

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h1>My Portfolio, coming soon...🛠️</h1>
+<section class="HomeHero">
+<h2 class="HomeHeroTitle big-text is-size-1">CREATIVE DEVELOPER</h2>
+
+</section>
