--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+    <body>
+    <%= render "shared/navbar" %>
+    <%= render "shared/flashes" %>
+
   <body>
     <%= yield %>
   </body>
