--- a/app/assets/stylesheets/pages/_global.scss
+++ b/app/assets/stylesheets/pages/_global.scss
@@ -1,18 +1,11 @@
 body {
   background-color: #E1DFDD;
+  color: black;
   height: 100vh;
   padding: 0px 45px;
 
 }
 
 h2 {
-  font-weight: 500;
-}
 
-@font-face {
-  font-family: "Neue Montreal";
-  src: url(fonts/PPNeueMontreal-Medium.otf);
-  font-style: normal;
-  font-weight: 100;
 }
-$my-font: "Neue Montreal";
