--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,9 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
 
 // Define fonts for body and headers
-// $body-font: "Neue Montreal", "Normal";
-// $headers-font: "Neue Montreal", "Bold";
+// $body-font: 'pp_neue_montrealbook', "normal";
+// $headers-font: 'pp_neue_montrealmedium', "normal";
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
@@ -14,3 +14,42 @@
 //        font-url('FontFile.ttf') format('truetype')
 // }
 // $my-font: "Font Name";
+@font-face {
+  font-family: 'pp_neue_montrealbook';
+  src: url('/assets/ppneuemontreal-book-webfont.woff2') format('woff2'),
+       url('/assets/ppneuemontreal-book-webfont.woff') format('woff');
+       font-weight: normal;
+       font-style: normal;
+}
+
+@font-face {
+  font-family: 'pp_neue_montrealmedium';
+  src: url('/assets/ppneuemontreal-medium-webfont.woff2') format('woff2'),
+       url('/assets/ppneuemontreal-medium-webfont.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'pp_neue_montrealthin';
+  src: url('/assets/ppneuemontreal-thin-webfont.woff2') format('woff2'),
+       url('/assets/ppneuemontreal-thin-webfont.woff') format('woff');
+  font-weight: lighter;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'pp_neue_montrealbold';
+  src: url('/assets/ppneuemontreal-bold-webfont.woff2') format('woff2'),
+       url('/assets/ppneuemontreal-bold-webfont.woff') format('woff');
+  font-weight: bolder;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'pp_neue_montrealitalic';
+  src: url('/assets/ppneuemontreal-italic-webfont.woff2') format('woff2'),
+       url('/assets/ppneuemontreal-italic-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: italic;
+}
