--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,8 @@
-<section class="HomeHero">
-<h2 class="HomeHeroTitle big-text is-size-1">CREATIVE DEVELOPER</h2>
-
+<section class="HomeHero is-responsive">
+  <h2 class="HomeHeroTitle big-text columns">FULLSTACK<br>DEVELOPER</h2>
+  <div class="columns">
+    <span class="arrow big-text column is-one-fifth">↓</span>
+    <p class="resume column">I SUPPORT DESIGNERS <br> AND AGENCIES WITH <br> CREATIVE DEVELOPMENT</p>
+    <h2 class="HomeHeroName big-text column">VALENTIN<br>CHAUVEAU</h2>
+  </div>
 </section>
