--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar is-transparent" role="navigation" aria-label="main navigation">
+<nav class="navbar is-transparent is-responsive" role="navigation" aria-label="main navigation">
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
       <a class="navbar-item">
@@ -7,15 +7,15 @@
     </div>
 
     <div class="navbar-end">
-      <a class="navbar-item">
+      <a class="navbar-item hover-underline-animation">
         Work
       </a>
 
-      <a class="navbar-item">
+      <a class="navbar-item hover-underline-animation">
         About
       </a>
 
-      <a class="navbar-item">
+      <a class="navbar-item hover-underline-animation">
         Contact
       </a>
     </div>
