--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,21 @@
-<section class="HomeHero is-responsive">
-  <h2 class="HomeHeroTitle big-text columns">FULLSTACK<br>DEVELOPER</h2>
-  <div class="columns">
+<section class="hero is-responsive pt-6">
+  <div class="hero-body">
+    <h2 class="HomeHeroTitle big-text columns pl-2 mb-5">FULLSTACK<br>DEVELOPER</h2>
+
+    <div class="columns my-5">
+      <div class="column image">
+        <%= image_tag("profile-pic-blck.jpg") %>
+      </div>
+      <p class="resume column">I SUPPORT DESIGNERS <br> AND AGENCIES WITH <br> CREATIVE DEVELOPMENT</p>
+      <h2 class="HomeHeroName big-text column is-half is-align-content-baseline">VALENTIN<br>CHAUVEAU</h2>
+    </div>
     <span class="arrow big-text column is-one-fifth">↓</span>
-    <p class="resume column">I SUPPORT DESIGNERS <br> AND AGENCIES WITH <br> CREATIVE DEVELOPMENT</p>
-    <h2 class="HomeHeroName big-text column">VALENTIN<br>CHAUVEAU</h2>
+    <div class="columns my-5">
+      <div class="column image">
+        <%= image_tag("profile-pic-blck.jpg") %>
+      </div>
+      <p class="resume column">I SUPPORT DESIGNERS <br> AND AGENCIES WITH <br> CREATIVE DEVELOPMENT</p>
+      <h2 class="HomeHeroName big-text column is-half is-align-content-baseline">VALENTIN<br>CHAUVEAU</h2>
+    </div>
   </div>
 </section>
