--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-    <body>
+    <body class="has-navbar-fixed-top">
     <%= render "shared/navbar" %>
     <%= render "shared/flashes" %>
 
