--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
-<nav class="navbar is-transparent is-responsive" role="navigation" aria-label="main navigation">
+<nav class="navbar is-fixed-top is-transparent is-responsive" role="navigation" aria-label="main navigation">
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item">
+      <a class="navbar-item oim">
         Valentin Chauveau
       </a>
     </div>
