--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,6 @@
 <section class="hero is-responsive pt-6">
   <div class="hero-body">
     <h2 class="HomeHeroTitle big-text columns pl-2 mb-5">FULLSTACK<br>DEVELOPER</h2>
-
     <div class="columns my-5">
       <div class="column image">
         <%= image_tag("profile-pic-blck.jpg") %>
@@ -9,13 +8,87 @@
       <p class="resume column">I SUPPORT DESIGNERS <br> AND AGENCIES WITH <br> CREATIVE DEVELOPMENT</p>
       <h2 class="HomeHeroName big-text column is-half is-align-content-baseline">VALENTIN<br>CHAUVEAU</h2>
     </div>
-    <span class="arrow big-text column is-one-fifth">↓</span>
-    <div class="columns my-5">
-      <div class="column image">
-        <%= image_tag("profile-pic-blck.jpg") %>
-      </div>
-      <p class="resume column">I SUPPORT DESIGNERS <br> AND AGENCIES WITH <br> CREATIVE DEVELOPMENT</p>
-      <h2 class="HomeHeroName big-text column is-half is-align-content-baseline">VALENTIN<br>CHAUVEAU</h2>
+    <div class="columns">
+      <span class="arrow big-text column is-one-fifth ">↓</span>
+      <div class="column"></div>
+      <span class="arrow big-text column is-one-fifth has-text-right">↓</span>
     </div>
   </div>
 </section>
+
+<section class="Projects section is-responsive mb-6 mx-6", id="work">
+  <h2 class="medium-text columns pl-3 mb-5 is-widescreen  ">PROJECTS</h2>
+
+  <div class="tile is-ancestor">
+    <div class="tile is-vertical is-8">
+      <div class="tile">
+        <div class="tile is-parent is-vertical">
+            <article class="tile is-child notification">
+              <p class="title">Vertical...</p>
+              <p class="subtitle">Top tile</p>
+            </article>
+          <article class="tile is-child notification">
+            <p class="title">...tiles</p>
+            <p class="subtitle">Bottom tile</p>
+          </article>
+        </div>
+        <div class="tile is-parent">
+          <article class="tile is-child notification">
+            <p class="title">Middle tile</p>
+            <p class="subtitle">With an image</p>
+            <figure class="image is-4by3">
+              <img src="https://bulma.io/images/placeholders/640x480.png">
+            </figure>
+          </article>
+        </div>
+      </div>
+      <div class="tile is-parent">
+        <article class="tile is-child notification">
+          <p class="title">Wide tile</p>
+          <p class="subtitle">Aligned with the right tile</p>
+          <div class="content">
+            <!-- Content -->
+          </div>
+        </article>
+      </div>
+    </div>
+    <div class="tile is-parent">
+      <article class="tile is-child notification is-success">
+        <div class="content white-p">
+          <p class="title">Tall tile</p>
+          <p class="subtitle">With even more content</p>
+          <div class="content">
+            <!-- Content -->
+          </div>
+        </div>
+      </article>
+    </div>
+  </div>
+</section>
+
+<section class="About skills section is-responsive mt-6 mb-6", id="about">
+    <h2 class="medium-text columns pl-3 mb-5">ABOUT ME</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    <br>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    <div class="skills">
+    </div>
+</section>
+
+<%= render partial: "3d_round_viewer" %>
+
+<section class="Contact section columns is-responsive mx-6", id="contact">
+    <span class="Email is-responsive has-text-centered">BONJOUR@VALENTINCHAUVEAU.COM</span>
+</section>
+
+<footer class="footer is-medium px-6">
+  <div class="columns ">
+    <a href="https://github.com/Ouskababoushka" class="column " target="_blank">Github</a>
+    <div class="column has-text-centered">Made with 🖤 by<br>Valentin Chauveau 2022</div>
+    <a href="https://www.linkedin.com/in/valentinchauveau/" class="column has-text-right" target="_blank">Linkedin</a>
+  </div>
+</footer>
