--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,22 +1,23 @@
-<nav class="navbar is-fixed-top is-transparent is-responsive" role="navigation" aria-label="main navigation">
+<nav class="navbar is-fixed-top is-transparent is-responsive mx-5" role="navigation" aria-label="main navigation">
   <div id="navbarBasicExample" class="navbar-menu">
-    <div class="navbar-start">
-      <a class="navbar-item oim">
+    <div class="navbar-start ml-3">
+      <a href="<%= root_path %>" class="navbar-item oim">
         Valentin Chauveau
       </a>
     </div>
 
-    <div class="navbar-end">
-      <a class="navbar-item hover-underline-animation">
+    <div class="navbar-end mr-3">
+      <a href="<%= '#work' %>" class="navbar-item hover-underline-animation">
         Work
       </a>
 
-      <a class="navbar-item hover-underline-animation">
+      <a href="<%= '#about' %>" class="navbar-item hover-underline-animation">
         About
       </a>
 
-      <a class="navbar-item hover-underline-animation">
+      <a href="<%= '#contact' %>" class="navbar-item hover-underline-animation">
         Contact
       </a>
     </div>
+  </div>
 </nav>
