--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -30,6 +30,7 @@
   font-weight: bold!important;
   font-style: normal!important;
   font-size: 3rem;
+  cursor: alias;
 }
 
 .Projects {
@@ -56,8 +57,4 @@
 
 .block {
   display: block;
-}
-
-.Email {
-  cursor: url-path("sans-titre-1.png"), auto;
 }
