--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,39 +1,39 @@
 <section class="hero is-responsive pt-6">
   <div class="hero-body">
-    <h2 class="HomeHeroTitle big-text columns pl-2 mb-5">FULLSTACK<br>DEVELOPER</h2>
+    <h2 class="HomeHeroTitle big-text columns pl-2 mb-5 el">FULLSTACK<br>DEVELOPER</h2>
     <div class="columns my-5">
-      <div class="column image">
+      <div class="column image el">
         <%= image_tag("profile-pic-blck.jpg") %>
       </div>
-      <p class="resume column">I SUPPORT DESIGNERS <br> AND AGENCIES WITH <br> CREATIVE DEVELOPMENT</p>
-      <h2 class="HomeHeroName big-text column is-half is-align-content-baseline has-text-right">VALENTIN<br>CHAUVEAU</h2>
+      <p class="resume column el">I SUPPORT DESIGNERS <br> AND AGENCIES WITH <br> CREATIVE DEVELOPMENT</p>
+      <h2 class="HomeHeroName big-text column is-half is-align-content-baseline has-text-right el">VALENTIN<br>CHAUVEAU</h2>
     </div>
     <div class="columns">
-      <span class="arrow big-text column is-one-fifth ">↓</span>
+      <span class="arrow big-text column is-one-fifth el">↓</span>
       <div class="column"></div>
-      <span class="arrow big-text column is-one-fifth has-text-right">↓</span>
+      <span class="arrow big-text column is-one-fifth has-text-right el">↓</span>
     </div>
   </div>
 </section>
 
 <section class="Projects section is-responsive mb-6 mx-6", id="work">
-  <h2 class="medium-text columns pl-3 mb-5 is-widescreen  ">PROJECTS</h2>
+  <h2 class="medium-text columns pl-3 mb-5 is-widescreen el">PROJECTS</h2>
 
   <div class="tile is-ancestor">
     <div class="tile is-vertical is-8">
       <div class="tile">
         <div class="tile is-parent is-vertical">
-            <article class="tile is-child notification">
+            <article class="tile is-child notification el">
               <p class="title">Vertical...</p>
               <p class="subtitle">Top tile</p>
             </article>
-          <article class="tile is-child notification">
+          <article class="tile is-child notification el">
             <p class="title">...tiles</p>
             <p class="subtitle">Bottom tile</p>
           </article>
         </div>
         <div class="tile is-parent">
-          <article class="tile is-child notification">
+          <article class="tile is-child notification el">
             <p class="title">Middle tile</p>
             <p class="subtitle">With an image</p>
             <figure class="image is-4by3">
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div class="tile is-parent">
-        <article class="tile is-child notification">
+        <article class="tile is-child notification el">
           <p class="title">Wide tile</p>
           <p class="subtitle">Aligned with the right tile</p>
           <div class="content">
@@ -53,7 +53,7 @@
       </div>
     </div>
     <div class="tile is-parent">
-      <article class="tile is-child notification is-success">
+      <article class="tile is-child notification is-success el">
         <div class="content white-p">
           <p class="title">Tall tile</p>
           <p class="subtitle">With even more content</p>
@@ -67,21 +67,21 @@
 </section>
 
 <section class="About skills section is-responsive mt-6 mb-6", id="about">
-    <h2 class="medium-text columns pl-3 mb-5">ABOUT ME</h2>
-    <p>
+    <h2 class="medium-text columns pl-3 mb-5 el">ABOUT ME</h2>
+    <p class="el">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
     <br>
-    <p>
+    <p class="el">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
-    <div class="skills">
+    <div class="skills el">
     </div>
 </section>
 
 <%# <%= render partial: "3d_round_viewer" %>
 
-<section class="Contact section columns is-responsive mx-6", id="contact">
+<section class="Contact section columns is-responsive mx-6 el", id="contact">
     <button data-text-swap="Copied to clipboard" onclick="copyText()" class="Email is-responsive has-text-centered my-6">BONJOUR@VALENTINCHAUVEAU.COM</button>
     <script>
 
@@ -110,10 +110,34 @@
     </script>
 </section>
 
-<footer class="footer is-medium px-6">
+<footer class="footer is-medium px-6 el">
   <div class="columns ">
     <a href="https://github.com/Ouskababoushka" class="column " target="_blank">Github</a>
     <div class="column has-text-centered">Made with 🖤 by<br>Valentin Chauveau 2022</div>
     <a href="https://www.linkedin.com/in/valentinchauveau/" class="column has-text-right" target="_blank">Linkedin</a>
   </div>
 </footer>
+
+<script>
+  // ScrollReveal().reveal('.HomeHeroTitle', { delay: 100 });
+  // ScrollReveal().reveal('.resume', { delay: 200 });
+  // ScrollReveal().reveal('.HomeHeroName', { delay: 300 });
+  // ScrollReveal().reveal('.image', { delay: 200 });
+  // ScrollReveal().reveal('.hero', { delay: 100 });
+  // ScrollReveal().reveal('.hero', { delay: 100 });
+  // ScrollReveal().reveal('.hero', { delay: 100 });
+  // ScrollReveal().reveal('.hero', { delay: 100 });
+  // ScrollReveal().reveal('.hero', { delay: 100 });
+  // ScrollReveal().reveal('.hero', { delay: 100 });
+  // ScrollReveal().reveal('.hero', { delay: 100 });
+ScrollReveal().reveal('.el', {
+    delay: 500,
+    useDelay: 'onload',
+    reset: true,
+})
+
+ScrollReveal().reveal('.el', {
+    delay: 0,
+    interval: 80
+})
+</script>
