--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,56 +17,55 @@
 </section>
 
 <section class="Projects section is-responsive mb-6 mx-6", id="work">
-  <h2 class="medium-text columns pl-3 mb-5 is-widescreen el">PROJECTS</h2>
+  <h2 class="medium-text pl-3 mb-5 is-widescreen el">PROJECTS</h2>
 
-  <div class="tile is-ancestor">
-    <div class="tile is-vertical is-8">
-      <div class="tile">
-        <div class="tile is-parent is-vertical">
-            <article class="tile is-child notification el">
-              <p class="title">Vertical...</p>
-              <p class="subtitle">Top tile</p>
-            </article>
-          <article class="tile is-child notification el">
-            <p class="title">...tiles</p>
-            <p class="subtitle">Bottom tile</p>
-          </article>
+  <div class="songsalad columns my-6 el">
+    <div class="flip-card">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <%= image_tag("songsalad-screen.png") %>
         </div>
-        <div class="tile is-parent">
-          <article class="tile is-child notification el">
-            <p class="title">Middle tile</p>
-            <p class="subtitle">With an image</p>
-            <figure class="image is-4by3">
-              <img src="https://bulma.io/images/placeholders/640x480.png">
-            </figure>
-          </article>
+        <div class="flip-card-back">
+          <a href="http://songsalad.com/" target="blank" class="is-size-3">SONGSALAD.COM</a>
+          <p class="mt-6 has-text-left">SONGSALAD IS A GAME APP DEVELOPED ON RAILS 6 WHERE THE GOAL IS TO FIND THE LYRICS AND THE SONG TITLE TO WIN</p>
         </div>
       </div>
-      <div class="tile is-parent">
-        <article class="tile is-child notification el">
-          <p class="title">Wide tile</p>
-          <p class="subtitle">Aligned with the right tile</p>
-          <div class="content">
-            <!-- Content -->
-          </div>
-        </article>
+    </div>
+  <div class="column"></div>
+  </div>
+
+  <div class=" columns my-6 el">
+    <div class="column"></div>
+    <div class="flip-card">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+        </div>
+        <div class="flip-card-back">
+          <h3>songsalad.com</h3>
+          <p>game app</p>
+        </div>
       </div>
     </div>
-    <div class="tile is-parent">
-      <article class="tile is-child notification is-success el">
-        <div class="content white-p">
-          <p class="title">Tall tile</p>
-          <p class="subtitle">With even more content</p>
-          <div class="content">
-            <!-- Content -->
-          </div>
+  </div>
+
+  <div class=" columns my-6 el">
+    <div class="flip-card">
+      <div class="flip-card-inner">
+        <div class="flip-card-front">
+          <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
         </div>
-      </article>
+        <div class="flip-card-back">
+          <h3>songsalad.com</h3>
+          <p>game app</p>
+        </div>
+      </div>
     </div>
+    <div class="column"></div>
   </div>
 </section>
 
-<section class="About skills section is-responsive mt-6 mb-6", id="about">
+<section class="About section is-responsive mt-6 mb-6", id="about">
     <h2 class="medium-text columns pl-3 mb-5">ABOUT ME</h2>
     <p class="el">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -75,8 +74,45 @@
     <p class="el">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
-    <div class="skills el">
-    </div>
+</section>
+
+<section class="skills section el my-6">
+  <nav class="breadcrumb is-centered" aria-label="breadcrumbs">
+    <ul>
+      <li>
+        <a href="#">
+          <span class="icon is-small">
+            <i class="fas fa-home" aria-hidden="true"></i>
+          </span>
+          <span>Technical</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="icon is-small">
+            <i class="fas fa-book" aria-hidden="true"></i>
+          </span>
+          <span>Languages</span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <span class="icon is-small">
+            <i class="fas fa-puzzle-piece" aria-hidden="true"></i>
+          </span>
+          <span>Tools</span>
+        </a>
+      </li>
+      <li class="is-active">
+        <a href="#">
+          <span class="icon is-small">
+            <i class="fas fa-thumbs-up" aria-hidden="true"></i>
+          </span>
+          <span>Project Management</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
 </section>
 
 <%# <%= render partial: "3d_round_viewer" %>
