--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
 </section>
 
 <section class="Projects section is-responsive mb-6 mx-6", id="work">
-  <h2 class="medium-text pl-3 mb-5 is-widescreen el">PROJECTS</h2>
+  <h2 class="medium-text mb-5 is-widescreen el">PROJECTS</h2>
 
   <div class="songsalad columns my-6 el">
     <div class="flip-card">
@@ -26,8 +26,8 @@
           <%= image_tag("songsalad-screen.png") %>
         </div>
         <div class="flip-card-back">
-          <a href="http://songsalad.com/" target="blank" class="is-size-3">SONGSALAD.COM</a>
-          <p class="mt-6 has-text-left">SONGSALAD IS A GAME APP DEVELOPED ON RAILS 6 WHERE THE GOAL IS TO FIND THE LYRICS AND THE SONG TITLE TO WIN</p>
+          <a href="http://songsalad.com/" target="blank" class="has-text-left is-size-3">SONGSALAD.COM</a>
+          <p class="mt-6 has-text-left">SONGSALAD IS A MOBILE FIRST GAME APP DEVELOPED ON RAILS. THE GOAL IS TO FIND THE LYRICS AND THE SONG TITLE IN ORDER TO WIN THE GAME SESSION</p>
         </div>
       </div>
     </div>
@@ -35,21 +35,21 @@
   </div>
 
   <div class=" columns my-6 el">
-    <div class="column"></div>
+    <div class="column my-6"></div>
     <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+          <%= image_tag("4.png") %>
         </div>
         <div class="flip-card-back">
-          <h3>songsalad.com</h3>
-          <p>game app</p>
+          <a href="" target="blank" class="has-text-right is-size-3">LESBONSCOMPAGNONS.FR</a>
+          <p class="mt-6 has-text-left">LES BONS COMPAGNONS ARE TRADERS OPERATING IN FOOD MARKETS. THIS IS A 360° PROJECT WHERE I CREATED LOGO & IDENTITY ALONGSIDE A MARKETPLACE. </p>
         </div>
       </div>
     </div>
   </div>
 
-  <div class=" columns my-6 el">
+  <div class=" columns mt-6 el">
     <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
@@ -66,13 +66,16 @@
 </section>
 
 <section class="About section is-responsive mt-6 mb-6", id="about">
-    <h2 class="medium-text columns pl-3 mb-5">ABOUT ME</h2>
+    <h2 class="medium-text columns pl-3 mb-5">ABOUT</h2>
     <p class="el">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      I'M A 29YO FRENCH DEVELOPER <br>GRADUATED FROM LE WAGON NANTES. <br>
+      I LOVE MAKING AND LISTENING TO MUSIC. <br>
+      TAKE A LISTEN HERE&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;→→→
     </p>
     <br>
     <p class="el">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+      I'M CURRENTLY AVAILABLE TO WORK.
     </p>
 </section>
 
@@ -118,7 +121,7 @@
 <%# <%= render partial: "3d_round_viewer" %>
 
 <section class="Contact section columns is-responsive mx-6", id="contact">
-    <button data-text-swap="Copied to clipboard" onclick="copyText()" class="Email is-responsive has-text-centered my-6 el">BONJOUR@VALENTINCHAUVEAU.COM</button>
+    <button data-text-swap="Copied to <br> clipboard" onclick="copyText()" class="Email hover-underline-animation is-responsive my-6 el has-text-left">BONJOUR@VALENTIN <br> CHAUVEAU.COM</button>
     <script>
 
       function copyText() {
