--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -3,7 +3,7 @@
   width: 50%;
   height: 330px;
   // border: 1px solid #f1f1f1;
-  // perspective: 1000px;
+  perspective: 1000px;
 }
 
 .flip-card-inner {
