--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -79,7 +79,7 @@
     </p>
 </section>
 
-<section class="skills section el my-6">
+<%# <section class="skills section el my-6">
   <nav class="breadcrumb is-centered" aria-label="breadcrumbs">
     <ul>
       <li>
@@ -106,7 +106,7 @@
           <span>Tools</span>
         </a>
       </li>
-      <li class="is-active">
+      <li>
         <a href="#">
           <span class="icon is-small">
             <i class="fas fa-thumbs-up" aria-hidden="true"></i>
@@ -116,7 +116,7 @@
       </li>
     </ul>
   </nav>
-</section>
+</section> %>
 
 <%# <%= render partial: "3d_round_viewer" %>
 
