--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,9 +1,9 @@
 .flip-card {
   background-color: transparent;
-  width: 50%;
-  height: 330px;
+  width: 45%;
+  height: 320px;
   // border: 1px solid #f1f1f1;
-  perspective: 1000px;
+  // perspective: 1000px;
 }
 
 .flip-card-inner {
@@ -36,4 +36,5 @@
   background-color: $green;
   color: white;
   transform: rotateY(180deg);
+  a {color: white!important;}
 }
