--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,48 +16,44 @@
   </div>
 </section>
 
-<section class="Projects section is-responsive mb-6 mx-6", id="work">
+<section class="Projects section mb-6 mx-6", id="work">
   <h2 class="medium-text mb-5 is-widescreen el">PROJECTS</h2>
 
-  <div class="songsalad columns my-6 el">
-    <div class="flip-card">
+  <div class="songsalad lbc columns mt-6">
+    <div class="flip-card column mb-6">
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <%= image_tag("songsalad-screen.png") %>
         </div>
-        <div class="flip-card-back">
+        <div class="flip-card-back has-text-left">
           <a href="http://songsalad.com/" target="blank" class="has-text-left is-size-3">SONGSALAD.COM</a>
-          <p class="mt-6 has-text-left">SONGSALAD IS A MOBILE FIRST GAME APP DEVELOPED ON RAILS. THE GOAL IS TO FIND THE LYRICS AND THE SONG TITLE IN ORDER TO WIN THE GAME SESSION</p>
+          <p class="mt-6 has-text-left">SONGSALAD IS A MOBILE FIRST GAME APP DEVELOPED ON RAILS. IT IS A PERSONAL PROJECT WHERE THE GOAL IS TO FIND THE LYRICS AND THE SONG TITLE IN ORDER TO WIN THE GAME SESSION</p>
         </div>
       </div>
     </div>
-  <div class="column"></div>
-  </div>
 
-  <div class=" columns my-6 el">
-    <div class="column my-6"></div>
-    <div class="flip-card">
+    <div class="flip-card column mb-6">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <%= image_tag("4.png") %>
+          <%= image_tag("lbc.png") %>
         </div>
-        <div class="flip-card-back">
-          <a href="" target="blank" class="has-text-right is-size-3">LESBONSCOMPAGNONS.FR</a>
+        <div class="flip-card-back has-text-left">
+          <a href="" target="blank" class="is-size-3">LESBONSCOMPAGNONS.FR</a>
           <p class="mt-6 has-text-left">LES BONS COMPAGNONS ARE TRADERS OPERATING IN FOOD MARKETS. THIS IS A 360° PROJECT WHERE I CREATED LOGO & IDENTITY ALONGSIDE A MARKETPLACE. </p>
         </div>
       </div>
     </div>
   </div>
 
-  <div class=" columns mt-6 el">
-    <div class="flip-card">
+  <div class="rocky-aloha columns mt-6 el">
+    <div class="flip-card column">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+          <%= image_tag("rocky-aloha-screen.png") %>
         </div>
-        <div class="flip-card-back">
-          <h3>songsalad.com</h3>
-          <p>game app</p>
+        <div class="flip-card-back has-text-left">
+          <a href="http://rocky-aloha.herokuapp.com/" target="blank" class="has-text-right is-size-3">ROCKY-ALOHA.HEROKUAPP.COM</a>
+          <p class="mt-6 has-text-left">ROCKY ALOHA IS A FICTIONAL MARKETPLACE. <br> IT IS A PERSONAL PROJECT BUILT ON RAILS, <br> INSPIRED BY AIRBNB.</p>
         </div>
       </div>
     </div>
@@ -65,7 +61,7 @@
   </div>
 </section>
 
-<section class="About section is-responsive mt-6 mb-6", id="about">
+<section class="About section mx-5 mt-6 mb-6", id="about">
     <h2 class="medium-text columns pl-3 mb-5">ABOUT</h2>
     <p class="el">
       I'M A 29YO FRENCH DEVELOPER <br>GRADUATED FROM LE WAGON NANTES. <br>
@@ -120,8 +116,8 @@
 
 <%# <%= render partial: "3d_round_viewer" %>
 
-<section class="Contact section columns is-responsive mx-6", id="contact">
-    <button data-text-swap="Copied to <br> clipboard" onclick="copyText()" class="Email hover-underline-animation is-responsive my-6 el has-text-left">BONJOUR@VALENTIN <br> CHAUVEAU.COM</button>
+<section class="Contact section columns mx-6", id="contact">
+    <button data-text-swap="Copied to <br> clipboard" onclick="copyText()" class="Email hover-underline-animation my-6 el has-text-left">BONJOUR@VALENTIN <br> CHAUVEAU.COM</button>
     <script>
 
       function copyText() {
