--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,10 +3,10 @@ body {
   background-color: #E1DFDD;
   color: black!important;
   // height: 100vh;
-  padding: 0px 2vw;
+  // padding: 0px 2vw;
 }
 
-a { color: black!important; }
+// a { color: black!important; }
 
 li {
   color: black!important;
