--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
       <div class="column image el">
         <%= image_tag("profile-pic-blck.jpg") %>
       </div>
-      <p class="resume column el">I SUPPORT DESIGNERS <br> AND AGENCIES WITH <br> CREATIVE DEVELOPMENT</p>
+      <p class="resume column el">I CREATE LOGOS AND WEBSITE <br> LOREM IPSUM LOREM IPSUM <br> </p>
       <h2 class="HomeHeroName big-text column is-half is-align-content-baseline has-text-right el">VALENTIN<br>CHAUVEAU</h2>
     </div>
     <div class="columns">
@@ -70,7 +70,6 @@
     </p>
     <br>
     <p class="el">
-
       I'M CURRENTLY AVAILABLE TO WORK.
     </p>
 </section>
