--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,22 +1,18 @@
 .navbar {
   padding: 2vh 2vw 0 2vw!important;
-  background-color: transparent;
-  color: black!important;
+  background-color: rgb(225, 223, 221);
+  color: rgb(0, 0, 0);
   font-family: 'pp_neue_montrealbook'!important;
   font-weight: bold!important;
   font-style: normal!important;
-  font-size: 1.3vw;
+  font-size: 1.4rem;
   text-decoration: none!important;
 }
 
-// .navbar-lewagon .navbar-collapse {
-//   flex-grow: 0;
-// }
-// .w3rcontainer{
-//   border: 1px solid
-// #cccfdb;
-//   border-radius: 2px;
-// }
+.hidden {
+  // display: none;
+}
+
 .hover-underline-animation {
  display: inline-block;
  position: relative;
@@ -46,5 +42,5 @@ a {
 }
 
 .oim {
-  color: black!important;
+  // color: black!important;
 }
