--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -35,12 +35,9 @@
 .hover-underline-animation:hover:after {
  transform: scaleX(1);
  transform-origin: bottom left;
+
 }
 
-a {
-  text-decoration: none!important;
-}
-
-.oim {
-  // color: black!important;
-}
+// a {
+//   text-decoration: none!important;
+// }
