--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,26 +16,26 @@
   </div>
 </section>
 
-<section class="Projects section mb-6 mx-6", id="work">
+<section class="Projects section mb-6 mx-6 is-medium", id="work">
   <h2 class="medium-text mb-5 is-widescreen el">PROJECTS</h2>
 
   <div class="songsalad lbc columns mt-6">
-    <div class="flip-card column mb-6">
+    <div class="flip-card column mb-6 el">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <%= image_tag("songsalad-screen.png") %>
+          <%= image_tag("songsalad-screen.png", alt: "Songsalad", height: 330, crop: :cover) %>
         </div>
         <div class="flip-card-back has-text-left">
           <a href="http://songsalad.com/" target="blank" class="has-text-left is-size-3">SONGSALAD.COM</a>
-          <p class="mt-6 has-text-left">SONGSALAD IS A MOBILE FIRST GAME APP DEVELOPED ON RAILS. IT IS A PERSONAL PROJECT WHERE THE GOAL IS TO FIND THE LYRICS AND THE SONG TITLE IN ORDER TO WIN THE GAME SESSION</p>
+          <p class="mt-6 has-text-left">*PERSONAL PROJECT* SONGSALAD IS A MOBILE FIRST GAME APPLICATION DEVELOPED ON RAILS WHERE THE GOAL IS TO FIND THE LYRICS AND THE TITLE OF THE SONG IN ORDER TO WIN THE GAME SESSION. </p>
         </div>
       </div>
     </div>
 
     <div class="flip-card column mb-6">
-      <div class="flip-card-inner">
+      <div class="flip-card-inner el">
         <div class="flip-card-front">
-          <%= image_tag("lbc.png") %>
+          <%= image_tag("lbc-calicot-design.png", alt: "Les Bons Compagnons", height: 300, crop: :fill) %>
         </div>
         <div class="flip-card-back has-text-left">
           <a href="" target="blank" class="is-size-3">LESBONSCOMPAGNONS.FR</a>
@@ -45,15 +45,15 @@
     </div>
   </div>
 
-  <div class="rocky-aloha columns mt-6 el">
-    <div class="flip-card column">
+  <div class="rockyaloha columns mt-6">
+    <div class="flip-card column mb-6 el">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <%= image_tag("rocky-aloha-screen.png") %>
+          <%= image_tag("rocky-aloha-screen.png", alt: "Rocky Aloha", height: 330, crop: :cover) %>
         </div>
         <div class="flip-card-back has-text-left">
-          <a href="http://rocky-aloha.herokuapp.com/" target="blank" class="has-text-right is-size-3">ROCKY-ALOHA.HEROKUAPP.COM</a>
-          <p class="mt-6 has-text-left">ROCKY ALOHA IS A FICTIONAL MARKETPLACE. <br> IT IS A PERSONAL PROJECT BUILT ON RAILS, <br> INSPIRED BY AIRBNB.</p>
+          <a href="" target="blank" class="has-text-left is-size-3">SONGSALAD.COM</a>
+          <p class="mt-6 has-text-left">*PERSONAL PROJECT* SONGSALAD IS A MOBILE FIRST GAME APPLICATION DEVELOPED ON RAILS WHERE THE GOAL IS TO FIND THE LYRICS AND THE TITLE OF THE SONG IN ORDER TO WIN THE GAME SESSION. </p>
         </div>
       </div>
     </div>
