--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,7 +1,8 @@
 .flip-card {
   background-color: transparent;
-  width: 45%;
-  height: 320px;
+  width: 100%;
+  height: 330px;
+  object-fit: cover;
   // border: 1px solid #f1f1f1;
   // perspective: 1000px;
 }
@@ -28,7 +29,7 @@
 }
 
 .flip-card-front {
-  background-color: #E1DFDD;
+  background-color: white;
   color: black;
 }
 
