--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,11 @@
-<section class="hero is-responsive pt-6" id="top">
+<section class="hero is-responsive pt-6 mb-6" id="top">
   <div class="hero-body">
     <h2 class="HomeHeroTitle big-text columns pl-2 mb-5 el">FULLSTACK<br>DEVELOPER</h2>
     <div class="columns my-5">
       <div class="column image el">
         <%= image_tag("profile-pic-blck.jpg") %>
       </div>
-      <p class="resume column el">I CREATE LOGOS AND WEBSITE <br> LOREM IPSUM LOREM IPSUM <br> </p>
+      <p class="resume column el">I CREATE LOGOS AND WEBSITE <br> LOREM IPSUM LOREM IPSUM <br> LOREM IPSUM DOLOR KIKI. </p>
       <h2 class="HomeHeroName big-text column is-half is-align-content-baseline has-text-right el">VALENTIN<br>CHAUVEAU</h2>
     </div>
     <div class="columns">
@@ -16,14 +16,14 @@
   </div>
 </section>
 
-<section class="Projects section mb-6 mx-6 is-medium", id="work">
+<section class="Projects section mx-6 my-6 is-medium", id="work">
   <h2 class="medium-text mb-5 is-widescreen el">PROJECTS</h2>
 
   <div class="songsalad lbc columns mt-6">
     <div class="flip-card column mb-6 el">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <%= image_tag("songsalad-screen.png", alt: "Songsalad", height: 330, crop: :cover) %>
+          <div class="songsalad-image"></div>
         </div>
         <div class="flip-card-back has-text-left">
           <a href="http://songsalad.com/" target="blank" class="has-text-left is-size-3">SONGSALAD.COM</a>
@@ -35,7 +35,7 @@
     <div class="flip-card column mb-6">
       <div class="flip-card-inner el">
         <div class="flip-card-front">
-          <%= image_tag("lbc-calicot-design.png", alt: "Les Bons Compagnons", height: 300, crop: :fill) %>
+          <div class="lbc-image"></div>
         </div>
         <div class="flip-card-back has-text-left">
           <a href="" target="blank" class="is-size-3">LESBONSCOMPAGNONS.FR</a>
@@ -49,7 +49,7 @@
     <div class="flip-card column mb-6 el">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <%= image_tag("rocky-aloha-screen.png", alt: "Rocky Aloha", height: 330, crop: :cover) %>
+          <div class="rockyaloha-image"></div>
         </div>
         <div class="flip-card-back has-text-left">
           <a href="" target="blank" class="has-text-left is-size-3">SONGSALAD.COM</a>
@@ -61,8 +61,8 @@
   </div>
 </section>
 
-<section class="About section mx-5 mt-6 mb-6", id="about">
-    <h2 class="medium-text columns pl-3 mb-5">ABOUT</h2>
+<section class="About section mx-5 my-6 is-medium", id="about">
+    <h2 class="medium-text columns pl-3 mb-6 el">ABOUT</h2>
     <p class="el">
       I'M A 29YO FRENCH DEVELOPER <br>GRADUATED FROM LE WAGON NANTES. <br>
       I LOVE MAKING AND LISTENING TO MUSIC. <br>
@@ -152,15 +152,15 @@
   </div>
 </footer>
 
-<script>
+<script class="hidden">
   ScrollReveal().reveal('.el', {
-      delay: 500,
+      delay: 800,
       useDelay: 'onload',
       reset: true,
   })
 
   ScrollReveal().reveal('.el', {
       delay: 0,
-      interval: 80
+      interval: 120
   })
 </script>
